--- a/vue-practice/index.html
+++ b/vue-practice/index.html
@@ -12,7 +12,7 @@
       <p v-for="movie in movies">{{ movie }}</p>
       <button v-on:click="addMovie()"></button>
       <input type="text" v-model="movieInput" />
-      <img src="image" alt="Zoolander Film Poster" v-if="" />
+      <img src="http://tny.im/kPs" alt="Zoolander Film Poster" v-if="" />
     </div>
   </body>
 </html>
